@@ -1,5 +1,6 @@
 package com.distkv.dst.server.runtime.workerpool;
 
+import com.distkv.dst.common.DstTuple;
 import com.distkv.dst.common.NodeInfo;
 import com.distkv.dst.common.entity.sortedList.SortedListEntity;
 import com.distkv.dst.common.exception.DstException;
@@ -744,14 +745,14 @@ public class Worker extends Thread {
                 SortedListProtocol.GetMemberResponse.newBuilder();
             CommonProtocol.Status status;
             try {
-              List<Integer> scoreAndRankingValues =
+              DstTuple<Integer, Integer> tuple =
                   storeEngine.sortLists().getMember(request.getKey(), request.getMember());
               SortedListProtocol.SortedListEntity.Builder builder =
                   SortedListProtocol.SortedListEntity.newBuilder();
               builder.setMember(request.getMember());
-              builder.setScore(scoreAndRankingValues.get(0));
+              builder.setScore(tuple.getFirst());
               responseBuilder.setEntity(builder);
-              responseBuilder.setCount(scoreAndRankingValues.get(1));
+              responseBuilder.setCount(tuple.getSecond());
               status = CommonProtocol.Status.OK;
             } catch (KeyNotFoundException e) {
               status = CommonProtocol.Status.KEY_NOT_FOUND;
